--- a/tts.css
+++ b/tts.css
@@ -300,7 +300,7 @@ h4 {
     top: 310px;
   }
   .orangebg-2 {
-    top: 1500px;
+    top: 1440px;
   }
 
   /* Popular styles */
@@ -322,7 +322,7 @@ h4 {
     width: calc(100% - 20px);
   }
   .top-left-content input[type=submit] {
-    width: 100%;
+    width: calc(100% - 10px);
   }
 
   /* Second form */
@@ -338,12 +338,12 @@ h4 {
 
   /* Video styling */
   .middle-left-content {
-    width: 335px;
-    margin-left: 8px;
+    width: 345px;
+    margin-left: 6%;
   }
   .middle-left-content img {
     width: 270px;
-    left: 9%;
+    left: 12%;
   }
   #circle1, #circle2 {
     width: 120px;
@@ -356,7 +356,7 @@ h4 {
   }
   #circle2 {
     margin-top: -1%;
-    margin-left: 24%;
+    margin-left: 15%;
   }
 
   /* Video text styling */
@@ -376,7 +376,7 @@ h4 {
     width: 340px;
     height: 430px;
     margin-top: 45%;
-    margin-left: 8px;
+    margin-left: 5%;
   }
   .map img {
     width: 280px;
@@ -389,7 +389,7 @@ h4 {
   .tile-intro {
     width: 340px;
     margin-left: 8px;
-    margin-top: 145%;
+    margin-top: 135%;
   }
 
   /* Product tiles */
@@ -473,7 +473,6 @@ h4 {
   #circle1, #circle2 {
     width: 42vw;
     height: 42vw;
-    padding-left: 5vw;
   }
 
   #circle1 {
@@ -481,6 +480,7 @@ h4 {
   }
   #circle2 {
     margin-top: -1%;
+    margin-left: 5%;
   }
 
   /* Video text styling */
@@ -614,6 +614,7 @@ h4 {
   }
   #circle2 {
     margin-top: -1%;
+    margin-left: 12%;
   }
 
   /* Video text styling */
@@ -657,6 +658,10 @@ h4 {
   .tiles {
     width: 440px;
     top: 20px
+  }
+
+  h4{
+    margin-top: 4%;
   }
 
   /* Bottom form */
@@ -706,9 +711,11 @@ h4 {
   }
   #circle1 {
     margin-top: 35%;
+    margin-left: -5%;
   }
   #circle2 {
     margin-top: 15%;
+    margin-left: 10%;
   }
   .van {
     margin-left: 0;
@@ -787,7 +794,7 @@ h4 {
     margin-top: 5px;
   }
   .bottom-form {
-    margin-top: 135%;
+    margin-top: 140%;
   }
 }
 
@@ -871,7 +878,7 @@ h4 {
 }
 @media only screen and (min-width: 651px) and (max-width: 705px) {
   .orangebg-2 {
-    top: 1350px !important;
+    top: 1410px !important;
   }
 }
 @media only screen and (min-width: 706px) and (max-width: 768px) {
