--- a/MX Site/tts.css
+++ b/MX Site/tts.css
@@ -209,7 +209,7 @@ input[type=submit] {
   margin-bottom: 0;
 }
 .map p {
-  margin-left: 15%;
+  text-align: center;
   font-size: 18px;
   font-weight: bold;
   margin-bottom: 10px;
@@ -221,7 +221,7 @@ input[type=submit] {
   font-size: 18px;
 }
 .tour-dates .middle-column {
-  width: 15%;
+  width: 0%;
 }
 .tour-dates .cta {
   background-color: #FFB16F;
@@ -963,9 +963,6 @@ h4 {
   }
   .map h3 {
     font-size: 20px;
-  }
-  .map p {
-    margin-left: 21%;
   }
   .tour-dates {
     font-size: 14px;
